complains almost fixed

--- a/beamerthemeGWU.sty
+++ b/beamerthemeGWU.sty
@@ -45,11 +45,11 @@
 % block environment
 \setbeamercolor*{block body}{bg=white,fg=black}
 \setbeamercolor*{block title}{fg=i6colorscheme3,bg=GWUblue}
-\setbeamerfont{block title}{size=\large,series=\bf}
+\setbeamerfont{block title}{size=\large,series=\bfseries}
 
 % example environment
 \setbeamercolor*{example title}{fg=white,bg=i6colorscheme1}
-\setbeamerfont{example title}{size=\large,series=\bf}
+\setbeamerfont{example title}{size=\large,series=\bfseries}
 
 %\setbeamercolor*{example body}{fg=white,bg=i6colorscheme4}
 %\setbeamercolor*{example title}{fg=white,bg=i6colorscheme1}
@@ -94,16 +94,17 @@
     \begin{columns}[c]
       \begin{column}{.01\paperwidth}
       \end{column}
-      \begin{column}{.04\paperwidth}
+      \begin{column}{.15\paperwidth}
         \begin{center}
          % \hspace{2in}
-         \includegraphics[height=.06\paperwidth]{./gwu/gw_port_new.png}\hspace*{0.4in}
+         \includegraphics[height=.06\paperwidth]{./gwu/gw_port_new.png}
+         %\hspace*{0.4in}
       %    \includegraphics[width=\linewidth]{2000px-UCSD_Seal}\hspace*{0.2in}
       %    \includegraphics[width=\linewidth]{cgmsd}
         \end{center}
         %\vskip1ex
       \end{column}
-      \begin{column}{.75\paperwidth}
+      \begin{column}{.65\paperwidth}
         \vskip4ex
         \raggedleft
         \usebeamercolor{title in headline}{\color{fg}\textbf{\Large{\inserttitle}}\\[1ex]}
